--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@ https://www.tooplate.com/view/2115-marvel
                     <div class="about-text">
                         <small class="small-text">Welcome to <span class="mobile-block">my portfolio website!</span></small>
                         <h1 class="animated animated-text">
-                            <span class="mr-2">Hey folks, I'm a</span>
+                            <span class="mr-2">Hey folks, I'm</span>
                                 <div class="animated-info">
-                                    <span class="animated-item">Graphic Designer</span>
+                                    <span class="animated-item">Samuel</span>
                                     <span class="animated-item">Data Analyst</span>
                                     <span class="animated-item">Web Designer</span>
                                     
@@ -118,13 +118,13 @@ https://www.tooplate.com/view/2115-marvel
                       <div class="owl-carousel owl-theme">
                         <div class="item">
                           <div class="project-info">
-                            <img src="images/project/hr.png" class="img-fluid" alt="project image">
+                            <img src="images/project/fmp.JPG" class="img-fluid" alt="project image">
                           </div>
                         </div>
 
                         <div class="item">
                           <div class="project-info">
-                            <img src="images/project/sales.png" class="img-fluid" alt="project image">
+                            <img src="images/project/EndFemicide.png" class="img-fluid" alt="project image">
                           </div>
                         </div>
 
@@ -136,13 +136,13 @@ https://www.tooplate.com/view/2115-marvel
                         
                         <div class="item">
                           <div class="project-info">
-                            <img src="images/project/ENDFEMICIDE.png" class="img-fluid" alt="project image">
+                            <img src="images/project/sales.png" class="img-fluid" alt="project image">
                           </div>
                         </div>
 
                         <div class="item">
                           <div class="project-info">
-                            <img src="images/project/fmp.JPG" class="img-fluid" alt="project image">
+                            <img src="images/project/hr.png" class="img-fluid" alt="project image">
                           </div>
                         </div>
 
